[project]
name = "template-python"
version = "0.0.1"
description = "A GitHub template repository for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "ks6088ts" },
]
keywords = ["template", "python", "uv", "ruff", "pytest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "typer>=0.16.0",
]

[project.urls]
Homepage = "https://github.com/ks6088ts/template-python"
Documentation = "https://ks6088ts.github.io/template-python"
Repository = "https://github.com/ks6088ts/template-python"
Issues = "https://github.com/ks6088ts/template-python/issues"
Changelog = "https://github.com/ks6088ts/template-python/blob/main/CHANGELOG.md"

[dependency-groups]
docs = [
    "mkdocs-material>=9.6.14",
    "mkdocs-static-i18n>=1.3.0",
]
dev = [
    "coverage>=7.8.0",
    "jupyterlab>=4.4.2",
    "mypy>=1.11",
    "pip-audit>=2.7",
    "pre-commit>=4.2.0",
    "pyrefly>=0.44.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.7",
    "ty>=0.0.1a6",
    "types-python-dateutil",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["template_python"]

[tool.hatch.build.targets.sdist]
include = [
    "/template_python",
    "/tests",
    "/README.md",
    "/LICENSE",
]

# ------
# Ruff: linter & formatter
# https://docs.astral.sh/ruff/configuration/
# ------
[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    "notebooks",
    "site",
    ".venv",
]

[tool.ruff.lint]
# Selected rule sets:
#  E/W: pycodestyle, F: pyflakes, I: isort, N: pep8-naming, UP: pyupgrade,
#  B: flake8-bugbear, C4: comprehensions, SIM: simplify, RUF: ruff-specific,
#  S: flake8-bandit (security), LOG/G: logging best-practices, PTH: pathlib,
#  PERF: performance antipatterns, T20: print-call, RET: return,
#  ARG: unused arguments, TID: tidy imports, TC: type-checking imports,
#  PIE: misc lints, ICN: import conventions, ERA: commented-out code.
select = [
    "E", "W", "F", "I", "N", "UP",
    "B", "C4", "SIM", "RUF", "S",
    "LOG", "G", "PTH", "PERF",
    "T20", "RET", "ARG", "TID",
    "TC", "PIE", "ICN", "ERA",
]
ignore = [
    "D203",   # ignore: keep flexibility around blank-line-before-class
    "RET504", # unnecessary-assign-before-return: harmless and aids readability
    "SIM108", # ternary-instead-of-if-else: ternaries hurt readability sometimes
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",  # assert is essential in tests
    "ARG",   # pytest fixtures are passed as arguments
    "INP001",
    "PLR2004",
]
"scripts/**" = [
    "T201",  # print is acceptable in scripts
    "INP001",
]
"notebooks/**" = ["T201", "E402", "ERA001"]

[tool.ruff.lint.isort]
known-first-party = ["template_python"]

[tool.ruff.format]
docstring-code-format = true

# ------
# pytest
# ------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=template_python",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic.*",
]

# ------
# coverage.py
# ------
[tool.coverage.run]
source = ["template_python"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_also = [
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "\\.\\.\\.",
]

# ------
# Type checkers
# ------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_decorators = true
pretty = true
show_error_codes = true
files = ["template_python", "tests"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ty]
environment = { python-version = "3.10" }

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
